--- a/.github/workflows/tlds.yml
+++ b/.github/workflows/tlds.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Fetch TLDs and save to list.txt
+      - name: Fetch TLDs and save to tlds.txt
         run: |
           curl -s https://data.iana.org/TLD/tlds-alpha-by-domain.txt -o tld.txt
 
