--- a/.github/workflows/spellcheck.yml
+++ b/.github/workflows/spellcheck.yml
@@ -1,4 +1,4 @@
-name: Spell Check
+name: Auto Spell Check & Fix
 
 on:
   pull_request:
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  spell-check:
+  spell-check-and-fix:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,14 +20,40 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y codespell
 
-      - name: Run codespell
+      - name: Run codespell and fix
         run: |
-          codespell --ignore-words-list="hte" --skip="*.json,*.yaml" --check-filenames --check-hidden --quiet-level=3
+          codespell --ignore-words-list="hte" --skip="*.txt,*.json,*.yaml" --check-filenames --check-hidden --quiet-level=3 -w
         continue-on-error: true
 
-      - name: Annotate PR with spell check results
-        if: failure()
+      - name: Check if changes were made
+        id: check_changes
         run: |
-          echo "### Spelling Mistakes Found" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          codespell --ignore-words-list="hte" --skip="*.json,*.yaml" --check-filenames --check-hidden --quiet-level=3 >> $GITHUB_STEP_SUMMARY
+          if [ -n "$(git status --porcelain)" ]; then
+            echo "Changes found."
+            echo "::set-output name=changes::true"
+          else
+            echo "No changes found."
+            echo "::set-output name=changes::false"
+          fi
+
+      - name: Commit and push changes
+        if: steps.check_changes.outputs.changes == 'true'
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git checkout -b spell-check-fixes
+          git add .
+          git commit -m "Fix spelling mistakes via codespell"
+          git push --set-upstream origin spell-check-fixes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create a pull request
+        if: steps.check_changes.outputs.changes == 'true'
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: spell-check-fixes
+          title: "Fix spelling mistakes"
+          body: "This PR fixes spelling mistakes found by codespell."
+          delete-branch: true
